# python-workspace-101

./: .cspell.json  .editorconfig  .flake8  .markdownlint-cli2.yaml  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
